--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -152,3 +152,65 @@ body {
   text-align: center;
   margin-bottom: 70px;
 }
+
+/* ----------Main Content---------- */
+.main-content {
+  background-image: linear-gradient(var(--primary), black);
+  height: 100vh;
+  width: 100vw;
+}
+
+.home-screen {
+  position: absolute;
+  z-index: 1;
+  margin-left: 260px;
+  width: 80%;
+}
+
+.heading {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-dropdown {
+  position: absolute;
+  z-index: 2;
+  right: 0px;
+  top: 10px;
+  padding-top: 15px;
+}
+
+.profile-btn {
+  background-color: #131313;
+  color: white;
+  padding: 5px 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 30px;
+}
+
+.profile-btn-content {
+  display: none;
+  position: absolute;
+  background-color: #1e1e1e;
+  width: 100px;
+  margin-left: 10px;
+}
+
+.profile-dropdown:hover .profile-btn-content {
+  display: block;
+}
+
+.profile-btn-content p {
+  color: rgba(255, 255, 255, 0.641);
+  padding: 12px 16px;
+  margin: 0;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.profile-btn-content p:hover {
+  color: white;
+  background-color: #393939;
+}
