--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,8 +68,9 @@ body {
   color: white;
 }
 
-/* ----------Login Screen---------- */
-.login-screen {
+/* ----------Login & Register Screen---------- */
+.login-screen,
+.register-screen {
   height: 130vh;
   width: 100%;
   position: absolute;
@@ -151,6 +152,25 @@ body {
 .login-screen h3 {
   text-align: center;
   margin-bottom: 70px;
+}
+
+.register-btn {
+  background-color: var(--secondary);
+  color: white;
+  border: 1px solid var(--primary);
+  border-radius: 30px;
+  font-size: 20px;
+  font-family: inherit;
+  padding: 10px 20px;
+  margin-top: 15px;
+}
+
+.register-btn:hover {
+  background-color: var(--primary);
+}
+
+.pl-10 {
+  padding-left: 10px;
 }
 
 /* ----------Main Content---------- */
