--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,8 +45,8 @@ body {
 
 .alert {
   padding: 20px;
-  background-color: #f44336;
   color: white;
+  background-color: #f44336;
   width: fit-content;
   min-width: 300px;
   font-size: 20px;
@@ -68,9 +68,10 @@ body {
   color: white;
 }
 
-/* ----------Login & Register Screen---------- */
+/* ----------Login, Register & Reset Screen---------- */
 .login-screen,
-.register-screen {
+.register-screen,
+.reset-screen {
   height: 130vh;
   width: 100%;
   position: absolute;
@@ -83,7 +84,8 @@ body {
   margin: 50px auto;
 }
 
-.login-box {
+.login-box,
+.reset-box {
   max-width: 500px;
   margin: 50px auto;
   padding: 10px;
@@ -117,7 +119,8 @@ body {
   font-size: 30px;
 }
 
-.login-btn {
+.login-btn,
+.reset-btn {
   margin-top: 10px;
   margin-left: 130px;
   background-color: var(--secondary);
