--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -287,6 +287,40 @@ body {
   background-color: #393939;
 }
 
+/* ----------HomeScreen Playlists----------*/
+
+.playlist-container {
+  width: 100%;
+  height: 500px;
+}
+
+.playlist {
+  width: 380px;
+  height: 80px;
+  background-color: #7676764f;
+  transition: 1s;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.playlist:hover {
+  background-color: #b6b6b64f;
+  transition: 1s;
+}
+
+.playlist img {
+  width: 80px;
+  height: 80px;
+}
+
+.playlist h4 {
+  position: relative;
+  bottom: 10px;
+  left: 15px;
+  overflow: hidden;
+  width: 70%;
+  height: 22px;
+}
+
 /* ----------Bottom Bar---------- */
 
 .bottom-bar {
