--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -659,6 +659,87 @@ p {
   background-color: rgb(125, 125, 125);
 }
 
+/* ----------Edit Playlist Modal---------- */
+.edit-playlist-modal {
+  position: fixed;
+  z-index: 1;
+  padding-top: 150px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.edit-playlist-modal-content {
+  background-color: rgb(36, 36, 36);
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 500px;
+  height: 350px;
+}
+
+.modal-closebtn {
+  color: rgba(255, 255, 255, 0.667);
+  font-weight: bold;
+  float: right;
+  font-size: 30px;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+.edit-playlist-modal img {
+  padding-top: 20px;
+  width: 200px;
+  height: 200px;
+}
+
+.name-input {
+  position: relative;
+  top: -170px;
+  left: 20px;
+  width: 250px;
+  height: 40px;
+  background-color: rgb(83, 83, 83);
+  border: transparent;
+  border-radius: 5px;
+  color: white;
+  font-family: inherit;
+  font-size: 16px;
+  padding-left: 20px;
+}
+
+.desc-input {
+  position: relative;
+  top: -150px;
+  left: 220px;
+  width: 250px;
+  height: 130px;
+  background-color: rgb(83, 83, 83);
+  border: transparent;
+  border-radius: 5px;
+  color: white;
+  font-family: inherit;
+  font-size: 16px;
+  padding-left: 20px;
+  resize: none;
+}
+
+.edit-playlist-modal button {
+  position: relative;
+  top: -100px;
+  left: 120px;
+  font-family: inherit;
+  font-size: 16px;
+  width: 100px;
+  padding: 15px 10px;
+  border-radius: 30px;
+  font-weight: bold;
+}
+
 /* ----------Account Screen---------- */
 
 .account-screen {
