--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -740,6 +740,40 @@ p {
   font-weight: bold;
 }
 
+/* ----------Edit Image Modal----------*/
+.edit-image-modal {
+  position: fixed;
+  z-index: 2;
+  padding-top: 150px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.edit-image-modal-content {
+  background-color: rgb(36, 36, 36);
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 800px;
+  height: 200px;
+}
+
+.edit-image-modal img {
+  width: 150px;
+  height: 150px;
+  padding-top: 20px;
+  opacity: 0.5;
+}
+
+.edit-image-modal img:hover {
+  opacity: 1;
+}
+
 /* ----------Account Screen---------- */
 
 .account-screen {
