--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -807,6 +807,59 @@ p {
   opacity: 1;
 }
 
+/* ----------Library Screen----------*/
+.library-screen {
+  position: absolute;
+  z-index: 1;
+  margin-left: 260px;
+  width: 80%;
+  padding-bottom: 100px;
+}
+
+.library-screen h2 {
+  margin-top: 50px;
+  padding-bottom: 20px;
+}
+
+.playlist-card {
+  width: 200px;
+  height: 300px;
+  background-color: #1e1e1e;
+  border-radius: 15px;
+  transition: 0.5s;
+}
+
+.playlist-card:hover {
+  background-color: #2f2f2f;
+  transition: 0.5s;
+}
+
+.playlist-card img {
+  width: 170px;
+  height: 170px;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
+.playlist-card h4 {
+  margin-bottom: 5px;
+  margin-left: 15px;
+}
+
+.playlist-card h5 {
+  margin-top: 0;
+  margin-left: 15px;
+  color: rgb(164, 164, 164);
+}
+
+.card-container {
+  width: 100%;
+  min-height: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 /* ----------Account Screen---------- */
 
 .account-screen {
