--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -860,6 +860,61 @@ p {
   gap: 30px;
 }
 
+/* ----------Search Screen----------*/
+.search-screen {
+  position: absolute;
+  z-index: 1;
+  margin-left: 280px;
+  width: 80%;
+  padding-bottom: 150px;
+}
+
+.search-bar {
+  color: #555;
+  margin-top: 20px;
+  border: 3px solid black;
+  border-radius: 30px;
+  background-color: white;
+  width: fit-content;
+}
+
+.search-bar input {
+  width: 250px;
+  border: none;
+  background: transparent;
+  margin: 0;
+  padding: 12px 8px;
+  font-size: 14px;
+  color: inherit;
+  border: 1px solid transparent;
+  font-family: inherit;
+}
+
+.search-bar input:focus {
+  outline: none;
+}
+
+.search-icon {
+  font-size: 20px;
+  color: black;
+  padding-top: 5px;
+}
+
+.search-screen hr {
+  width: 100vw;
+  height: 1px;
+  background-color: white;
+  color: white;
+}
+
+.search-card-container {
+  width: 100%;
+  min-height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 /* ----------Account Screen---------- */
 
 .account-screen {
