--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -239,8 +239,27 @@ body {
 .home-screen {
   position: absolute;
   z-index: 1;
-  margin-left: 260px;
   width: 80%;
+}
+
+.ml-260 {
+  margin-left: 260px;
+}
+
+@media screen and (max-width: 1000px) {
+  .ml-260 {
+    margin: 15px;
+  }
+}
+
+.ml-240 {
+  margin-left: 240px;
+}
+
+@media screen and (max-width: 1000px) {
+  .ml-240 {
+    margin: 0px;
+  }
 }
 
 .heading {
@@ -249,9 +268,9 @@ body {
 }
 
 .profile-dropdown {
-  position: absolute;
+  position: fixed;
   z-index: 2;
-  right: 0px;
+  right: 20px;
   top: 10px;
   padding-top: 15px;
 }
@@ -395,7 +414,7 @@ body {
   margin-top: 10px;
   margin-left: 100px;
   height: 4px;
-  width: 80%;
+  width: 450px;
 }
 
 .progress-bar {
@@ -436,20 +455,9 @@ body {
   color: white;
 }
 
-.bottom-heart {
-  padding-top: 10px;
-  margin-left: 20px;
-  margin-right: 200px;
-}
-
-.fa-shuffle {
-  font-size: 20px;
-  margin-left: 235px;
-}
-
 .fa-backward-step {
   font-size: 20px;
-  margin-left: 250px;
+  margin-left: 45%;
 }
 
 .fa-circle-play,
@@ -475,6 +483,82 @@ body {
   margin-left: -20px;
 }
 
+.song-info-modal {
+  position: fixed;
+  z-index: 3;
+  padding-top: 350px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.song-info-modal-content {
+  background-color: rgb(36, 36, 36);
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  min-height: 150px;
+  display: flex;
+}
+
+.btm-modal-img {
+  width: 150px;
+  height: 150px;
+}
+
+.song-info-modal-content h2 {
+  padding-top: 40px;
+  padding-left: 20px;
+}
+
+.song-info-modal-content h3 {
+  padding-left: 20px;
+}
+
+@media screen and (max-width: 1300px) {
+  .bottom-bar {
+    display: block;
+  }
+  .current-song {
+    display: none;
+  }
+  .music-controls {
+    left: 0;
+  }
+  .sound-controls {
+    right: 150px;
+  }
+  .bottom-bar .fa-file-lines {
+    display: block;
+    position: absolute;
+    z-index: 4;
+    top: 20px;
+    left: 20px;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .sound-controls {
+    display: none;
+  }
+  .music-controls {
+    left: 10%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .music-controls {
+    left: 0;
+  }
+  .progress-container {
+    margin-left: 20px;
+  }
+}
+
 /* ----------Sidebar---------- */
 .sidebar {
   background-color: black;
@@ -483,6 +567,65 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+.full-sidebar {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  background-color: #131313;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.full-sidebar h1,
+.full-sidebar h3 {
+  margin-left: 30px;
+}
+
+.full-sidebar h3 {
+  padding: 10px;
+}
+
+.hamburger-menu {
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  top: 5px;
+  font-size: 15px;
+  width: max-content;
+  padding: 5px 10px;
+  background-color: black;
+  border-radius: 20px;
+}
+
+.bar {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .sidebar {
+    display: none;
+  }
+
+  .hamburger-menu {
+    display: block !important;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .hamburger-menu {
+    display: none;
+  }
+  .full-sidebar {
+    display: none;
+  }
 }
 
 .brand {
@@ -540,7 +683,6 @@ body {
 .playlist-screen {
   position: absolute;
   z-index: 1;
-  margin-left: 240px;
   width: 80%;
   padding-bottom: 140px;
 }
@@ -613,6 +755,19 @@ h3 {
 .row {
   width: 80%;
   padding-left: 15px;
+}
+
+@media screen and (max-width: 1000px) {
+  .row {
+    width: 100%;
+    padding-left: 0px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .duration {
+    font-size: 14px;
+  }
 }
 
 .playlist-screen .number {
@@ -721,6 +876,12 @@ p {
   height: 350px;
 }
 
+@media screen and (max-width: 600px) {
+  .edit-playlist-modal-content {
+    width: 90%;
+  }
+}
+
 .modal-closebtn {
   color: rgba(255, 255, 255, 0.667);
   font-weight: bold;
@@ -734,6 +895,13 @@ p {
   padding-top: 20px;
   width: 200px;
   height: 200px;
+}
+
+@media screen and (max-width: 600px) {
+  .edit-playlist-modal img {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 .name-input {
@@ -779,6 +947,22 @@ p {
   font-weight: bold;
 }
 
+@media screen and (max-width: 600px) {
+  .name-input {
+    top: -120px;
+  }
+
+  .desc-input {
+    top: -100px;
+    left: 170px;
+  }
+
+  .edit-playlist-modal button {
+    top: -50px;
+    left: 70px;
+  }
+}
+
 /* ----------Edit Image Modal----------*/
 .edit-image-modal {
   position: fixed;
@@ -817,7 +1001,6 @@ p {
 .album-screen {
   position: absolute;
   z-index: 1;
-  margin-left: 240px;
   width: 80%;
   padding-bottom: 140px;
 }
@@ -880,7 +1063,6 @@ p {
 .library-screen {
   position: absolute;
   z-index: 1;
-  margin-left: 260px;
   width: 80%;
   padding-bottom: 100px;
 }
@@ -933,7 +1115,6 @@ p {
 .search-screen {
   position: absolute;
   z-index: 1;
-  margin-left: 280px;
   width: 80%;
   padding-bottom: 150px;
 }
